Таблица магазинов в админке

--- a/test/spisok.html
+++ b/test/spisok.html
@@ -20,9 +20,10 @@
       <label>Название: <input type="text" disabled value="Павлино"></label><br>
       <label>адрес: <input type="text" disabled value="улица Павлино 25"></label><br>
     </div>
-
+<input type="button" value="" onclick="write_form(this)">
   </form>
   <div class="table_shop"></div>
+  <script src="../calc.js"></script>
 </body>
 
 </html>
