--- a/test/table.html
+++ b/test/table.html
@@ -34,8 +34,9 @@
 </head>
 
 <body>
-  <!-- <th rowspan="2">Интервалы размеров, мм</th>
-  <th colspan="4">Допуск IT, мкм, для квалитетов</th> -->
+  <!-- 
+  <th rowspan="2">Интервалы размеров, мм</th>
+  <th colspan="4">Допуск IT, мкм, для квалитетов</th> 
 
   <table>
     <thead>
@@ -49,7 +50,7 @@
       </tr>
     </thead>
     <tbody>
-      <!--  -->
+      
       <tr>
         <td>1</td>
         <td><input type="text" value="Павлино"></td>
@@ -102,6 +103,87 @@
         </tbody>
       </table>
     </form>
+  </div>
+  -->
+  <table>
+    <thead> .... </thead>
+    <tfoot> ... </tfoot>
+    <tbody>
+      <tr>
+        <td> ... </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <table>
+    <thead> .... </thead>
+    <tbody>
+      <tr>
+        <td> ... </td>
+      </tr>
+    </tbody>
+  </table>
+
+
+
+  <p><a href="vendor/logout.php" class="logout">Выход</a></p>
+  <p>Пользователь: Test.</p><a href="profile.php">user page</a><br><br>
+  <div class="table_shop">
+    <table>
+      <thead>
+        <tr>
+          <th colspan="5">Магазины</th>
+        </tr>
+        <tr>
+          <th>id</th>
+          <th>Название</th>
+          <th>адрес</th>
+          <th>телефон</th>
+          <th>e-mail</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th>1</th>
+          <td id="nameShopid_1">Жилгородок</td>
+          <td id="adresShopid_1">г. Балашиха, мкр. Ольгино, ул. Жилгородок, д. 44А</td>
+          <th>+79013874307</th>
+          <td>cpft.olgino2@yandex.ru</td>
+        </tr>
+        <!-- <tr>
+  <th>id</th><th>time</th><th>user</th><th>summa</th>
+</tr> -->
+
+        <tr>
+          <th>2</th>
+          <td id="nameShopid_2">Павлино</td>
+          <td id="adresShopid_2">г. Балашиха, мкр. Павлино, д. 15А</td>
+          <th>+79771694525</th>
+          <td>cpft.pavlino@yandex.ru</td>
+        </tr>
+        <tr>
+          <th>3</th>
+          <td id="nameShopid_3">Граничная</td>
+          <td id="adresShopid_3">г. Балашиха, мкр. Ольгино, ул. Граничная, д. 18</td>
+          <th>+7 901 424 73 04</th>
+          <td>cpft.olgino@yandex.ru</td>
+        </tr>
+        <tr>
+          <th>4</th>
+          <td id="nameShopid_4">Саввино</td>
+          <td id="adresShopid_4">г.Балашиха, мкр. Саввино, ул.Саввинская д. 5А</td>
+          <th>+79771484638</th>
+          <td>cpft.savvino@yandex.ru</td>
+        </tr>
+        <tr>
+          <th>5</th>
+          <td id="nameShopid_5">Купавна</td>
+          <td id="adresShopid_5">Балашиха, мкр. Купавна, ул. Адмирала Нахимова, д. 13</td>
+          <th>+7 991 226 53 23</th>
+          <td>cpft.kupavna@yandex.ru</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </body>
 
