Таблица Cash выводит имена users

--- a/test/table.html
+++ b/test/table.html
@@ -34,6 +34,16 @@
 </head>
 
 <body>
+
+  <table>
+    <thead> .... </thead>
+    <tfoot> ... </tfoot>
+    <tbody>
+      <tr>
+        <td> ... </td>
+      </tr>
+    </tbody>
+  </table>
   <!-- 
   <th rowspan="2">Интервалы размеров, мм</th>
   <th colspan="4">Допуск IT, мкм, для квалитетов</th> 
