Считает общие суммы купюр

--- a/test/table-cash.html
+++ b/test/table-cash.html
@@ -206,7 +206,8 @@
         <input type="number" readonly value="0" name="sum" id="summa"> -->
 
 
-        <input id="submitgo" type="submit" value="Отправить" onfocus="calc()" onmouseover="calc()">
+        <!-- <input id="submitgo" type="submit" value="Отправить" onfocus="calc()" onmouseover="calc()"> -->
+        <input id="submitgo" type="submit" value="Отправить" >
         <!-- disabled -->
 
       </div>
