По нажатию на кнопку включается редактирование

--- a/test/table.html
+++ b/test/table.html
@@ -51,11 +51,11 @@
 
     <td class="setting_td" id="edit_user_id_6">
       <button class="setting_but" onclick="edit_user(edit_user_id_6)">
-        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height="20px""> 
+        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height='20px'"> 
       </button></td>
 <!--
     <td class="poz_center setting" id="edit_user_id_6">
-      <img src="image/setting.jpg" alt="изменить" height="20px" color="green">
+      <img src="image/setting.jpg" alt="изменить" height='20px' color="green">
     </td>
 -->
     </tr>
@@ -69,7 +69,7 @@
 
     <td class="setting_td" id="edit_user_id_8">
       <button class="setting_but" onclick="edit_user(edit_user_id_8)">
-        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height="20px""> 
+        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height='20px'"> 
       </button></td>
     </tr>
 
@@ -77,19 +77,22 @@
             <th>10</th>
             <!-- ФИО -->
             <td id="nameUserid_10">
-            <input class="edit_line" type="text" name="full_name" placeholder="Введите свое полное имя" required pattern="[А-ЯЁ][а-яё]{1,32}\s[А-ЯЁ][а-яё]{1,32}\s[А-ЯЁ][а-яё]{1,32}$" title="Введите Фамилию Имя и Отчество (через пробелы c Заглавной буквы, 6-98 русских символов)." value="Иванов Петр Сергеевич">
-          </td>
+            <input type="text" name="full_name" placeholder="Введите свое полное имя" required pattern="[А-ЯЁ][а-яё]{1,32}\s[А-ЯЁ][а-яё]{1,32}\s[А-ЯЁ][а-яё]{1,32}$" 
+      title="Введите Фамилию Имя и Отчество (через пробелы c Заглавной буквы, 6-98 русских символов)."
+      value="
+            Иванов Петр Сергеевич
+          "></td>
             <td id="passwordid_10">infoehra</td>
             <td class="poz_center ">нет</td>
             <td class="poz_center ">нет</td>
 
     <td class="setting_td" id="edit_user_id_10">
       <button class="setting_but" onclick="edit_user(edit_user_id_10)">
-        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height="20px""> 
+        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height='20px'"> 
       </button></td>
 <!--
     <td class="poz_center setting" id="edit_user_id_10">
-      <img src="image/setting.jpg" alt="изменить" height="20px" color="green">
+      <img src="image/setting.jpg" alt="изменить" height='20px' color="green">
     </td>
 -->
     </tr><tr>
@@ -101,11 +104,11 @@
 
     <td class="setting_td" id="edit_user_id_13">
       <button class="setting_but" onclick="edit_user(edit_user_id_13)">
-        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height="20px""> 
+        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height='20px'"> 
       </button></td>
 <!--
     <td class="poz_center setting" id="edit_user_id_13">
-      <img src="image/setting.jpg" alt="изменить" height="20px" color="green">
+      <img src="image/setting.jpg" alt="изменить" height='20px' color="green">
     </td>
 -->
     </tr><tr>
@@ -117,11 +120,11 @@
 
     <td class="setting_td" id="edit_user_id_16">
       <button class="setting_but" onclick="edit_user(edit_user_id_16)">
-        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height="20px""> 
+        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height='20px'"> 
       </button></td>
 <!--
     <td class="poz_center setting" id="edit_user_id_16">
-      <img src="image/setting.jpg" alt="изменить" height="20px" color="green">
+      <img src="image/setting.jpg" alt="изменить" height='20px' color="green">
     </td>
 -->
     </tr><tr>
@@ -133,11 +136,11 @@
 
     <td class="setting_td" id="edit_user_id_17">
       <button class="setting_but" onclick="edit_user(edit_user_id_17)">
-        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height="20px""> 
+        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height='20px'"> 
       </button></td>
 <!--
     <td class="poz_center setting" id="edit_user_id_17">
-      <img src="image/setting.jpg" alt="изменить" height="20px" color="green">
+      <img src="image/setting.jpg" alt="изменить" height='20px' color="green">
     </td>
 -->
     </tr><tr>
@@ -149,11 +152,11 @@
 
     <td class="setting_td" id="edit_user_id_18">
       <button class="setting_but" onclick="edit_user(edit_user_id_18)">
-        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height="20px""> 
+        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height='20px'"> 
       </button></td>
 <!--
     <td class="poz_center setting" id="edit_user_id_18">
-      <img src="image/setting.jpg" alt="изменить" height="20px" color="green">
+      <img src="image/setting.jpg" alt="изменить" height='20px' color="green">
     </td>
 -->
     </tr><tr>
@@ -165,11 +168,11 @@
 
     <td class="setting_td" id="edit_user_id_19">
       <button class="setting_but" onclick="edit_user(edit_user_id_19)">
-        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height="20px""> 
+        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height='20px'"> 
       </button></td>
 <!--
     <td class="poz_center setting" id="edit_user_id_19">
-      <img src="image/setting.jpg" alt="изменить" height="20px" color="green">
+      <img src="image/setting.jpg" alt="изменить" height='20px' color="green">
     </td>
 -->
     </tr><tr>
@@ -181,11 +184,11 @@
 
     <td class="setting_td" id="edit_user_id_20">
       <button class="setting_but" onclick="edit_user(edit_user_id_20)">
-        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height="20px""> 
+        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height='20px'"> 
       </button></td>
 <!--
     <td class="poz_center setting" id="edit_user_id_20">
-      <img src="image/setting.jpg" alt="изменить" height="20px" color="green">
+      <img src="image/setting.jpg" alt="изменить" height='20px' color="green">
     </td>
 -->
     </tr><tr>
@@ -197,11 +200,11 @@
 
     <td class="setting_td" id="edit_user_id_22">
       <button class="setting_but" onclick="edit_user(edit_user_id_22)">
-        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height="20px""> 
+        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height='20px'"> 
       </button></td>
 <!--
     <td class="poz_center setting" id="edit_user_id_22">
-      <img src="image/setting.jpg" alt="изменить" height="20px" color="green">
+      <img src="image/setting.jpg" alt="изменить" height='20px' color="green">
     </td>
 -->
     </tr><tr>
@@ -213,11 +216,11 @@
 
     <td class="setting_td" id="edit_user_id_23">
       <button class="setting_but" onclick="edit_user(edit_user_id_23)">
-        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height="20px""> 
+        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height='20px'"> 
       </button></td>
 <!--
     <td class="poz_center setting" id="edit_user_id_23">
-      <img src="image/setting.jpg" alt="изменить" height="20px" color="green">
+      <img src="image/setting.jpg" alt="изменить" height='20px' color="green">
     </td>
 -->
     </tr><tr>
@@ -229,11 +232,11 @@
 
     <td class="setting_td" id="edit_user_id_24">
       <button class="setting_but" onclick="edit_user(edit_user_id_24)">
-        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height="20px""> 
+        <img class="setting_img" src="image/setting.jpg" alt="изменить" style="vertical-align:middle height='20px'"> 
       </button></td>
 <!--
     <td class="poz_center setting" id="edit_user_id_24">
-      <img src="image/setting.jpg" alt="изменить" height="20px" color="green">
+      <img src="image/setting.jpg" alt="изменить" height='20px' color="green">
     </td>
 -->
     </tr></tbody></table></div><br><br><div class="table_shop">
