Edit Users при нажатии edit поля редактируются

--- a/test/spisok.html
+++ b/test/spisok.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <select onchange='findOption(this)'>
+  <select >
     <option value='one'>1</option>
     <option value='two'>2</option>
     <option value='three'>3</option>
